[package]
name = "patina_mtrr"
version = "1.1.4"
edition = "2024"
license = "Apache-2.0"
description = "x64 MTRR programming library"
repository = "https://github.com/OpenDevicePartnership/patina-mtrr"
keywords = ["mtrr"]

[dependencies]
bitfield-struct = "0.12"
cfg-if = "1"

[dev-dependencies]
rand = "0.9"

[features]
std = []
doc = []
