[package]
name = "patina_mtrr"
version = "1.1.6"
edition = "2024"
license = "Apache-2.0"
description = "x64 MTRR programming library"
repository = "https://github.com/OpenDevicePartnership/patina-mtrr"
keywords = ["mtrr"]

[dependencies]
bitfield-struct = "0.13"
cfg-if = "1"

[dev-dependencies]
rand = "0.10"

[features]
std = []
doc = []
